k8s-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: node-sample-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: nodejs-app
          image: jinnabalu/nodejs-app
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: node-sample-namespace
spec:
  selector:
    app: nodejs-app
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
