k8s-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-sample-app-deployment
spec:
  selector:
    matchLabels:
      app: nodejs-sample-app
  replicas: 1
  template:
    metadata:
      labels:
        app: nodejs-sample-app
    spec:
      containers:
      - name: nodejs-sample-app
        image: jinnabalu/nodejs-sample-app
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-sample-app-service
spec:
  selector:
    app: nodejs-sample-app
  ports:
  - name: http
    port: 80
    targetPort: 3000
    nodePort: 30006
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-sample-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /nodejs-sample-app
        pathType: Prefix
        backend:
          service:
            name: nodejs-sample-app-service
            port:
              name: http
